# cboxes

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yml  codeql.yml
include/: bst.h  darray.h  list.h  node.h  types.h
include/c-collections/: bst.h  darray.h  list.h  types.h
include/cboxes/: algorithm.h  assert.h  bst.h  darray.h  def.h  defs.h  dynamic_array.h  error.h  hash.h  hashmap.h  link_node.h  linked_list.h  list.h  lnode.h  memory.h  nodes.h  numtypes.h  pair.h  shallow.h  status.h  str.h  string.h  type.h  types.h
scripts/: run_checks.sh
src/: algorithm.c  bst.c  darray.c  dynamic_array.c  hash.c  hashmap.c  link_node.c  linked_list.c  list.c  lnode.c  main.c  memory.c  node.c  nodes.c  pair.c  shallow.c  string.c  type.c
testing/: main.c  testing.c
tests/: ccheck.h  test_array.c  test_bst.c  test_common.h  test_darray.c  test_hashmap.c  test_list.c  test_string.c
tests/tools/: common.h
